# RemitGrade

./: .gitignore  Cargo.toml  README.md  redeploy.ps1  redeploy.sh
frontend/: check-sdk.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdminSetup.tsx  DepositFunds.tsx  EnrollStudent.tsx  GradePanel.tsx  Header.tsx  Hero.tsx  Remittance.tsx  StatusPanel.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/lib/: stellar.ts
src/: lib.rs  test.rs
test_snapshots/test/tests/: test_double_disbursement_rejected.1.json  test_full_grade_release_flow.1.json  test_pool_state_after_deposit.1.json  test_release_without_grade_unlock_panics.1.json  test_send_remittance_stores_receipt.1.json
